# opengl_tutorial

./: CMakeLists.txt
cmake/: setup_dependencies.cmake
src/: CMakeLists.txt
src/App/: CMakeLists.txt  main.cpp  main.h
src/GLAD/: CMakeLists.txt  glad.c
src/GLAD/include/glad/: glad.h
